--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-query": "4.0.0-beta.10"
   },
   "devDependencies": {
     "@testing-library/react": "^13.2.0",
