--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "happy-dom": "latest",
     "postcss": "^8.4.13",
     "prettier": "2.6.2",
+    "prop-types": "^15.8.1",
     "react-test-renderer": "17.0.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
