--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.7.0",
     "ky": "^0.30.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "4.0.0-beta.10"
   },
   "devDependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
