--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "happy-dom": "latest",
     "postcss": "^8.4.13",
     "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "prop-types": "^15.8.1",
     "react-test-renderer": "17.0.2",
     "tailwindcss": "^3.0.24",
